tests/errors/expects_2_arguments.b
fn test() {
    add := fn(int a, int b) -> int { return a + b; };
    result := add(1, 2, 3);
}
